# lit-fetcher

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.memory/: cursor.json  state.json
lit_fetcher/: __init__.py  cli.py
lit_fetcher/commands/: search.py  translate.py  zotero_ops.py
